--- a/handlebars/package.json
+++ b/handlebars/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "express": "^4.21.0",
     "express-handlebars": "^8.0.1",
+    "handlebars": "^4.7.8",
     "nodemon": "^3.1.7"
   }
 }
